<resources>
    <string name="app_name">CFT_Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_all_users">All users:</string>
    <string name="btn_update_list">Update list</string>
    <string name="welcome">Welcome!</string>
    <string name="user_list_full_name">%s %s %s</string>
    <string name="user_list_empty_full_name">Name not specified</string>
    <string name="user_list_cell">Cell: %s</string>
    <string name="user_list_address">%s, %s</string>
    <string name="network_error">Failed to download data from the network. Check your internet connection</string>
    <string name="user_list_empty_address">City not specified</string>
    <string name="let_s_try_find_people">Let\'s try find people</string>
    <string name="contacts_information">Contacts information:</string>
    <string name="login">Login:</string>
    <string name="email">Email: </string>
    <string name="phone">Phone:</string>
    <string name="cell">Cell:</string>
    <string name="registration_date_profile">Registered: %s years ago (%s)</string>
    <string name="general_info">%s, %s years old, %s</string>
    <string name="how_to_find_me">How to find me:</string>
    <string name="country">Country:</string>
    <string name="state">State:</string>
    <string name="street">Street:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="number_name_street">%s, %s</string>
    <string name="coordinates_value">%s, %s</string>
    <string name="country_timezone">%s (%s), %s</string>
    <string name="timezone">Timezone:</string>
    <string name="timezone_description">%s, %s</string>
    <string name="city_state_street">City, state, street:</string>
    <string name="city_state_street_value">%s, %s. %s, %s</string>
</resources>