<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:background="@drawable/users_list_bg_bottom">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp">


            <TextView
                android:id="@+id/tv_locations_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/how_to_find_me"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_timezone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_timezone"
                app:layout_constraintBottom_toBottomOf="@id/tv_timezone_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_timezone_title"

                />

            <TextView
                android:id="@+id/tv_timezone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/timezone"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_timezone_icon"
                app:layout_constraintTop_toBottomOf="@+id/tv_locations_info" />

            <TextView
                android:id="@+id/tv_timezone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_timezone_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_timezone_title"
                app:layout_constraintTop_toTopOf="@id/tv_timezone_title" />

            <ImageView
                android:id="@+id/iv_country_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_country"
                app:layout_constraintBottom_toBottomOf="@id/tv_country_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_country_title"

                />

            <TextView
                android:id="@+id/tv_country_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_country_icon"
                app:layout_constraintTop_toBottomOf="@+id/tv_timezone_title" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_country_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_country_title"
                app:layout_constraintTop_toTopOf="@id/tv_country_title" />

            <ImageView
                android:id="@+id/iv_city_state_street_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_street"
                app:layout_constraintBottom_toBottomOf="@id/tv_city_state_street_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_city_state_street_title"

                />

            <TextView
                android:id="@+id/tv_city_state_street_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/city_state_street"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_city_state_street_icon"
                app:layout_constraintTop_toBottomOf="@+id/tv_country_title" />

            <TextView
                android:id="@+id/tv_city_state_street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/city_state_street_value"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_city_state_street_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_city_state_street_title"
                app:layout_constraintTop_toTopOf="@id/tv_city_state_street_title" />

            <ImageView
                android:id="@+id/iv_coordinates_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_coordinates"
                app:layout_constraintBottom_toBottomOf="@id/tv_coordinates_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_coordinates_title"

                />

            <TextView
                android:id="@+id/tv_coordinates_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/coordinates"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_coordinates_icon"
                app:layout_constraintTop_toBottomOf="@+id/tv_city_state_street_title" />

            <TextView
                android:id="@+id/tv_coordinates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/coordinates_value"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_coordinates_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_coordinates_title"
                app:layout_constraintTop_toTopOf="@id/tv_coordinates_title"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</FrameLayout>