<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">


            <TextView
                android:id="@+id/tv_contacts_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/contacts_information"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_login_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_login"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_login_title"
                />

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_login_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_contacts_info" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_login_title"
                app:layout_constraintTop_toTopOf="@id/tv_login_title"
                tools:text="cool228" />

            <ImageView
                android:id="@+id/iv_email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_email"
                app:layout_constraintBottom_toBottomOf="@id/tv_email_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_email_title" />

            <TextView
                android:id="@+id/tv_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_email_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_email_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_email_title"
                app:layout_constraintTop_toTopOf="@id/tv_email_title"
                tools:text="cool228@mail.ru" />

            <ImageView
                android:id="@+id/iv_phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_phone"
                app:layout_constraintBottom_toBottomOf="@id/tv_phone_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_phone_title" />

            <TextView
                android:id="@+id/tv_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_phone_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_email_title" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_phone_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_phone_title"
                app:layout_constraintTop_toTopOf="@id/tv_phone_title"
                tools:text="233-43-56" />

            <ImageView
                android:id="@+id/iv_cellphone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_cellphone"
                app:layout_constraintBottom_toBottomOf="@id/tv_cellphone_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_cellphone_title" />

            <TextView
                android:id="@+id/tv_cellphone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/cell"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_cellphone_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_title" />

            <TextView
                android:id="@+id/tv_cellphone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_cellphone_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_cellphone_title"

                app:layout_constraintTop_toTopOf="@id/tv_cellphone_title"
                tools:text="+7(996)-233-43-56" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</FrameLayout>